--- a/style.css
+++ b/style.css
@@ -120,13 +120,20 @@ img {
 
 }
 
+.type-wrap {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .cake {
     transform: translateY(-50%);
     transform: translateX(-50%);
     left: 50%;
     position: absolute;
-    padding-top: 250px;
+    padding-top: 300px;
     z-index: -1;
+    max-width: 250px;
 }
 
 .btn-primary {
